package edu.austral.ingsis.clifford;

public interface Node {
    String getName();
}
